--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"node src/server/server.js\" \"node src/client/client.js\""
+    "start": "npx concurrently \"node src/server/server.js\" \"node src/client/client.js\""
   },
   "repository": {
     "type": "git",
@@ -17,9 +17,6 @@
     "url": "https://github.com/SalehKhalil/websocket-presentation/issues"
   },
   "homepage": "https://github.com/SalehKhalil/websocket-presentation#readme",
-  "devDependencies": {
-    "concurrently": "8.2.2"
-  },
   "dependencies": {
     "express": "4.18.2",
     "socket.io": "4.7.4",
