--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "websocket-presentation",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "main": "src/server.js",
   "scripts": {
-    "start": "npx concurrently \"node src/server/server.js\" \"node src/client/client.js\""
+    "start": "node src/server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SalehKhalil/websocket-presentation.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "SalehKhalil",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/SalehKhalil/websocket-presentation/issues"
   },
